Bill Skaggs <weskaggs@primate.ucdavis.edu>
	* plug-ins/Lighting/lighting_main.c
	* plug-ins/Lighting/lighting_main.h
	* plug-ins/Lighting/lighting_preview.c
	* plug-ins/Lighting/lighting_preview.h
	* plug-ins/Lighting/lighting_shade.c
	* plug-ins/Lighting/lighting_ui.c:  Made this plug-in support
	multiple light sources; implemented three, architecture now
	supports any number.  Changed material properties to more intuitve
	names; added "metallic" property.  Cleaned out some unused,
	commented-out code.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14021 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2004-07-16  Bill Skaggs <weskaggs@primate.ucdavis.edu>
+	
+	* plug-ins/Lighting/lighting_main.c
+	* plug-ins/Lighting/lighting_main.h
+	* plug-ins/Lighting/lighting_preview.c
+	* plug-ins/Lighting/lighting_preview.h
+	* plug-ins/Lighting/lighting_shade.c
+	* plug-ins/Lighting/lighting_ui.c:  Made this plug-in support 
+	multiple light sources; implemented three, architecture now 
+	supports any number.  Changed material properties to more intuitve
+	names; added "metallic" property.  Cleaned out some unused,
+	commented-out code.
+	
 2004-07-16  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/pdb.pl: include "libgimpbase/gimpbase.h" instead of
