2004-07-17  Sven Neumann  <sven@gimp.org>
	* app/plug-in/plug-ins.c (plug_ins_temp_proc_def_add)
	(plug_ins_init_file): use g_slist_prepend() instead of
	g_slist_append().

	* plug-ins/common/url.c (query): ported to the new PDB registration
	scheme.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14024 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-07-17  Sven Neumann  <sven@gimp.org>
+
+	* app/plug-in/plug-ins.c (plug_ins_temp_proc_def_add)
+	(plug_ins_init_file): use g_slist_prepend() instead of
+	g_slist_append().
+
+	* plug-ins/common/url.c (query): ported to the new PDB registration
+	scheme.
+
 2004-07-16  Sven Neumann  <sven@gimp.org>
 
 	* app/plug-in/plug-ins.c (plug_ins_init): sort the file procedures
