--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-17  Philip Lafleur  <plafleur@cvs.gnome.org>
+
+	* plug-ins/bmp/bmpwrite.c (WriteImage): Applied a patch from
+	Brion Vibber that fixes corruption when saving RLE-encoded
+	BMPs on big endian hosts. Fixes bug #147759.
+
 2004-07-17  Shlomi Fish  <shlomif@iglu.org.il>
 
 	* plug-ins/gimpressionist/: normalized the identifiers of 
