--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-17  Philip Lafleur  <plafleur@cvs.gnome.org>
+
+	* plug-ins/common/polar.c (polarize_func): moved array
+	initialization out of variable declaration. Fixes bug #147799.
+
 2004-07-17  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimphelp-ids.h: added the removed help IDs back.
