2004-07-17  Philip Lafleur  <plafleur@cvs.gnome.org>
	* plug-ins/common/polar.c (dialog_update_preview): Fixed a
	write to unallocated memory that was causing crashes in various
	spots.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14043 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-07-17  Philip Lafleur  <plafleur@cvs.gnome.org>
 
+	* plug-ins/common/polar.c (dialog_update_preview): Fixed a
+	write to unallocated memory that was causing crashes in various
+	spots.
+
+2004-07-17  Philip Lafleur  <plafleur@cvs.gnome.org>
+
 	* plug-ins/common/polar.c (polarize_func): moved array
 	initialization out of variable declaration. Fixes bug #147799.
 
