2004-07-18  Philip Lafleur  <plafleur@cvs.gnome.org>
	* app/paint/gimpink-blob.c (blob_make_convex): Check if the
	array index is legal before using it, not the other way around.
	Fixes bug #144856.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14045 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-18  Philip Lafleur  <plafleur@cvs.gnome.org>
+
+	* app/paint/gimpink-blob.c (blob_make_convex): Check if the
+	array index is legal before using it, not the other way around.
+	Fixes bug #144856.
+
 2004-07-17  Philip Lafleur  <plafleur@cvs.gnome.org>
 
 	* plug-ins/common/polar.c (dialog_update_preview): Fixed a
