--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-18  Sven Neumann  <sven@gimp.org>
+
+	* app/app-docs.sgml
+	* app/app-sections.txt
+	* app/app.types: updated after file dialog changes.
+
 2004-07-15  Michael Natterer  <mitch@gimp.org>
 
 	* app/app-docs.sgml
