--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-19  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/imagemap/imap_browse.[ch]: renamed struct member
+	file_selection to file_chooser.
+
 2004-07-19  Michael Natterer  <mitch@gimp.org>
 
 	* app/config/config-types.h: removed GimpConfigInterface typedef,
