--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-19  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/widgets-types.h: reordered and commented to match
+	API docs.
+
 2004-07-19  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/imagemap/imap_browse.[ch]: renamed struct member
