2004-07-19  Michael Natterer  <mitch@gimp.org>
	* app/plug-in/plug-in.h (struct _PlugIn): removed obsolete
	compile-time check for GLIB >= 2.3.5.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14056 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-19  Michael Natterer  <mitch@gimp.org>
+
+	* app/plug-in/plug-in.h (struct _PlugIn): removed obsolete
+	compile-time check for GLIB >= 2.3.5.
+
 2004-07-19  Shlomi Fish  <shlomif@iglu.org.il>
 
 	* ChangeLog: Fixed a copy-and-paste error with the dates of my commits.
