--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-19  Michael Natterer  <mitch@gimp.org>
+
+	* app-docs.sgml
+	* app-sections.txt: more updates and cleanups.
+
 2004-07-18  Sven Neumann  <sven@gimp.org>
 
 	* app/app-docs.sgml
