2004-07-19  Michael Natterer  <mitch@gimp.org>
	* app/core/gimpchannel-combine.c (gimp_channel_combine_ellipse):
	comments not intended for gtk-doc must not start with '/**'.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14058 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-19  Michael Natterer  <mitch@gimp.org>
 
+	* app/core/gimpchannel-combine.c (gimp_channel_combine_ellipse):
+	comments not intended for gtk-doc must not start with '/**'.
+
+2004-07-19  Michael Natterer  <mitch@gimp.org>
+
 	* app/plug-in/plug-in.h (struct _PlugIn): removed obsolete
 	compile-time check for GLIB >= 2.3.5.
 
