Bill Skaggs <weskaggs@primate.ucdavis.edu>
	* app/core/gimpchannel-combine.c: put in two lines accidentally
	omitted in previous change, improve doc comment.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14060 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-19  Bill Skaggs <weskaggs@primate.ucdavis.edu>
+
+	* app/core/gimpchannel-combine.c: put in two lines accidentally
+	omitted in previous change, improve doc comment.
+	
 2004-07-19  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpbase/gimpwin32-io.h: added copyright header, added
