2004-07-19  Michael Natterer  <mitch@gimp.org>
	* app/gui/file-open-location-dialog.c
	(file_open_location_dialog_show): added the "web" icon left of
	label & entry.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14063 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-07-19  Michael Natterer  <mitch@gimp.org>
 
+	* app/gui/file-open-location-dialog.c
+	(file_open_location_dialog_show): added the "web" icon left of
+	label & entry.
+
+2004-07-19  Michael Natterer  <mitch@gimp.org>
+
 	* app/paint/gimppaintcore.h: removed enum GimpPaintCoreState.
 
 	* app/paint/paint-enums.h: added enum GimpPaintState (with values
