--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-07-19  Michael Natterer  <mitch@gimp.org>
 
+	* app/core/gimpmarshal.list: removed unused VOID:UINT,STRING.
+
+2004-07-19  Michael Natterer  <mitch@gimp.org>
+
 	* app/gui/file-open-location-dialog.c
 	(file_open_location_dialog_show): added the "web" icon left of
 	label & entry.
