2004-07-19  Michael Natterer  <mitch@gimp.org>
	* app/app-sections.txt: GimpPaintCoreState -> GimpPaintState.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14071 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,5 +1,9 @@
 2004-07-19  Michael Natterer  <mitch@gimp.org>
 
+	* app/app-sections.txt: GimpPaintCoreState -> GimpPaintState.
+
+2004-07-19  Michael Natterer  <mitch@gimp.org>
+
 	* app-docs.sgml
 	* app-sections.txt: more updates and cleanups.
 
