--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-07-19  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/Lighting/lighting_ui.c: fixed a couple of issues with
+	the new code: don't include individual glib headers, never ever
+	use sprintf(), mark user-visible strings for translations, use
+	default messages, removed trailing whitespace.
+
 2004-07-19  Bill Skaggs <weskaggs@primate.ucdavis.edu>
 
 	* plug-ins/Lighting/lighting_ui.c: added ability to save and load
