2004-07-20  Sven Neumann  <sven@gimp.org>
	* plug-ins/Lighting/lighting_ui.c: fixed some GUI issues:
	left-align labels, use stock buttons, added line-breaks to make
	the code fit into 80 columns.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14073 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-20  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/Lighting/lighting_ui.c: fixed some GUI issues:
+	left-align labels, use stock buttons, added line-breaks to make
+	the code fit into 80 columns.
+
 2004-07-19  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/Lighting/lighting_ui.c: fixed a couple of issues with
