2004-07-20  Sven Neumann  <sven@gimp.org>
	* plug-ins/MapObject/Makefile.am (MapObject_SOURCES): added back
	arcball.h.

	* plug-ins/MapObject/mapobject_main.c
	* plug-ins/MapObject/mapobject_preview.c: no need to include
	arcball.h here.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14076 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-07-20  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/MapObject/Makefile.am (MapObject_SOURCES): added back
+	arcball.h.
+
+	* plug-ins/MapObject/mapobject_main.c
+	* plug-ins/MapObject/mapobject_preview.c: no need to include
+	arcball.h here.
+
 	* plug-ins/gfig/Makefile.am (SUBDIRS): added back gfig-examples
 
 	* plug-ins/gfig/gfig-examples/Makefile.am: cleanup.
