2004-07-20  Sven Neumann  <sven@gimp.org>
	* plug-ins/gimpressionist/Makefile.am (gimpressionist_sources):
	added paper.h.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14077 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2004-07-20  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/gimpressionist/Makefile.am (gimpressionist_sources):
+	added paper.h.
+
 	* plug-ins/MapObject/Makefile.am (MapObject_SOURCES): added back
 	arcball.h.
 
