2004-07-20  Sven Neumann  <sven@gimp.org>
	* plug-ins/winicon/icoload.c
	* plug-ins/winicon/icosave.c: added explicit casts to please the
	compiler.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14078 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-07-20  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/winicon/icoload.c
+	* plug-ins/winicon/icosave.c: added explicit casts to please the
+	compiler.
+
+2004-07-20  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/gimpressionist/Makefile.am (gimpressionist_sources):
 	added paper.h.
 
