2004-07-20  Sven Neumann  <sven@gimp.org>
	* autogen.sh: added some empty lines to improve readability of the
	output in case of problems.

	* configure.in: bumped version number to 2.1.3.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14083 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-07-20  Sven Neumann  <sven@gimp.org>
+
+	* autogen.sh: added some empty lines to improve readability of the
+	output in case of problems.
+
+	* configure.in: bumped version number to 2.1.3.
+
 2004-07-19  Helvetix Victorinox  <helvetix@gimp.org>
 
 	* app/composite/gimp-composite-mmx.c
